[package]
name = "mode-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26.1"
time = "0.3.37"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["tokio"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"